; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/extr_audiogen.c_put32.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/extr_audiogen.c_put32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@outfile = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @put32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put32(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 255
  %5 = load i32, i32* @outfile, align 4
  %6 = call i32 @fputc(i32 %4, i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = ashr i32 %7, 8
  %9 = and i32 %8, 255
  %10 = load i32, i32* @outfile, align 4
  %11 = call i32 @fputc(i32 %9, i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = ashr i32 %12, 16
  %14 = and i32 %13, 255
  %15 = load i32, i32* @outfile, align 4
  %16 = call i32 @fputc(i32 %14, i32 %15)
  %17 = load i32, i32* %2, align 4
  %18 = ashr i32 %17, 24
  %19 = and i32 %18, 255
  %20 = load i32, i32* @outfile, align 4
  %21 = call i32 @fputc(i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @fputc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
